--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,5 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.95"
 tokio = { version = "1", features = ["full"] }
 tokio-stream = { version = "0.1.12", features = ["io-util"] }
+tracing = "0.1.37"
+tracing-subscriber = "0.3.16"
